# Whispr

./: .gitignore  .pre-commit-config.yaml  6WeekSeerCo  6WeekWhisprCo  DEVELOPMENT_SUMMARY_07_06.md  Dockerfile  Kitchenz_SR_Zones_Stable_3Zone_v1.ts  README.md  SPX_Trading_System_Documentation.md  TESTING_STRATEGY.md  Trading System Documentation.docx  Trading System Documentation.pdf.txt  WHISPR_PROJECT_MASTER_PLAN.md  docker-compose.yml  env.example  main.py  requirements.txt
Scripts/: convert_pdf_to_md.py  pivot_ribbon_pro.ts  saty_atr_levels.ts  saty_phase_oscillator.pine
backend/: ARCHITECTURE.md  CODEX_INTEGRATION_SETUP.md  CODEX_USAGE_GUIDE.md  ORACLE_CLOUD_SETUP.md  README.md  SCHWAB_SETUP.md  SCHWAB_STREAMER_README.md  STRATEGY_DEVELOPMENT_GUIDE.md  VOMY_IVOMY_ARCHITECTURE.md  alembic.ini  atr_calculator.py  atr_database_integration.py  atr_strategy.py  atr_system.py  codex_integration.py  codex_router.py  codezx_agents.py  codezx_api.py  conviction_arrow_strategy.py  data_collector.py  data_providers.py  database.py  database_bootstrap_replacement.py  debug_atr.py  fix_bootstrap_method.py  fix_timeframe_access.py  indicator_service.py  llm.py  main.py  models.py  newtask.sh  production_atr_calculator.py  requirements.txt  rules.py  setup_schwab_oauth.py  start_codex_integration.py  strategies.py  test_15m_30m.py  test_codex_integration.py  test_codezx_core.py  (+10 more)
backend/examples/strategy-pack/: pyproject.toml  whispr_strategy_template.py
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
rule_engine/: __init__.py  base.py  (+1 more)
(+328 files in other folders)
